--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
   <div class="card">
     <h1>💌 Para mi novio el macizo y bien wuapote 💌</h1>
     <p class="sub">
-      Esto es una pequeña prueba de cuánto significas para mí uwu.
+      ♥♥♥♥
     </p>
 
     <p class="question">
@@ -202,7 +202,7 @@
 
     btnYes.addEventListener("click", () => {
       answerText.innerHTML =
-        '<span> 💖 Gracias por quedarte conmigo iwi, prometo hacerte feliz cada día.</span>';
+        '<span> 💖 yeyy iwi, prometo hacerte feliz cada día.</span>';
       burstHearts(22); // un poquito más de corazones
     });
 
@@ -250,3 +250,4 @@
   </script>
 </body>
 </html>
+
