--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
     <div class="answer" id="answerText"></div>
 
-    <p class="extra-message">P.D: Te amo 💗</p>
+    <p class="extra-message"> Te amo jeje 💗</p>
   </div>
 
   <script>
@@ -212,3 +212,4 @@
   </script>
 </body>
 </html>
+
