--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Carta virtual de amor</title>
+  <title>...</title>
   <style>
     * {
       box-sizing: border-box;
@@ -212,4 +212,5 @@
   </script>
 </body>
 </html>
+
 
